--- a/index.html
+++ b/index.html
@@ -2,44 +2,27 @@
 <html>
 	<head>
 <script type="text/javascript">
-	    function mytime(){
-        var a = new Date();
-        var c = a.getDate()-22;
-        document.getElementById("time1").innerHTML = "已经有"+c*4+"人向3022269126@qq.com/softwareshare@qq.com发送了代码。";
-        }
-    setInterval(function() {mytime()},1000);
-function w_alert()
+function alert_what()
   {
-	  var para=document.createElement("strong");
-var node=document.createTextNode("If you want to submit your code,you can send it to 3022269126@qq.com or softwareshare@qq.com before 2018/6/15.don't forget label your name and your email");
-para.appendChild(node);
-
-var element=document.getElementById("div1");
-element.appendChild(para);
-  alert("If you want to submit your code,you can send it to 3022269126@qq.com or softwareshare@qq.com before 2018/6/15.don't forget label your name and your email")
-  
+	var element=document.getElementById("div1");
+	element.val="<pre>SWS语言由softwareshare组织创建于2017年，自第一个版本起就十分受欢迎。它是
+SWS语言有许多优点，以下是它的几大优点：
+1：节省工作以及代码量。
+2：拥有世界上最强大的开源可移植窗体图形库。
+3：拥有世界上最强大的开源算法库。
+4：可移植性高，做到一次编译，所有平台运行。
+5：学习，上手简单，初学者也可以在短时间内掌握编程窍门。
+6：软件维护简单，同时大部分错误都一目了然。
+当然，SWS语言有许多缺点，以下是它的几大缺点：
+1：对网络编程支持度不佳，它的snet库虽指令精简，速度快，但经常出现一些意外问题，有些问题就连它的开发者都无法解决。
+2：对数据库支持度不佳，只支持SWS官方数据库，导致不善于和其他语言混合编程。
+3：对底层编程支持度不佳，导致很难与硬件或底层系统交互，不适用于大型软件工程。</pre>"
   }
 </script>
 </head>
 	<body>
-		<h1>SWS编程比赛2018</h1>
-		<pre>
-题目:
-要求:通过算法输出圆周率值程序可以为C++,C,JS代码。并可以通过GCC的编译或可在Chrome上输出结果，并要求为原创代码。
-:通过算法输出圆周率值，程序可以为C++,C,JS代码。并可以通过GCC的编译或可在Chrome上输出结果，并要求为原创代码。
-评判标准：
-要求程序准确输出小数点后10位圆周率，先按准确性筛选，在准确性相同的情况下按输出所需时间判断名次。
-奖励：
-1:前百分之五可以获得实验舱定制ｕ盘一个（16gb）以及奖状一张，还有机会参与由GitHub发起总决赛并且如果得奖则可获得由GitHub提供的100元奖金。
-2:同时我们还会奖励具有创意的代码，奖品为实验舱定制ｕ盘一个（16gb）以及奖状一张。 
-祝你好运！
-主办方：实验舱，邵启瑞
-赞助方：实验舱，GITHUB中文社区</p>
-	</pre>
-	<button onclick="w_alert()">submit your code(提交你的代码)</button>
-	<div id="div1">
-	<p><p id="time1"></p></p>
-
-
+		<h1>学习SWS语言</h1>
+	 	<button onclick="w_alert()">SWS语言是什么？</button>
+		<div id="div1"/>
 	</body>
 </html>
