--- a/index.html
+++ b/index.html
@@ -5,18 +5,7 @@
 function alert_what()
   {
 	var element=document.getElementById("div1");
-	element.val="<pre>SWS语言由softwareshare组织创建于2017年，自第一个版本起就十分受欢迎。它是
-SWS语言有许多优点，以下是它的几大优点：
-1：节省工作以及代码量。
-2：拥有世界上最强大的开源可移植窗体图形库。
-3：拥有世界上最强大的开源算法库。
-4：可移植性高，做到一次编译，所有平台运行。
-5：学习，上手简单，初学者也可以在短时间内掌握编程窍门。
-6：软件维护简单，同时大部分错误都一目了然。
-当然，SWS语言有许多缺点，以下是它的几大缺点：
-1：对网络编程支持度不佳，它的snet库虽指令精简，速度快，但经常出现一些意外问题，有些问题就连它的开发者都无法解决。
-2：对数据库支持度不佳，只支持SWS官方数据库，导致不善于和其他语言混合编程。
-3：对底层编程支持度不佳，导致很难与硬件或底层系统交互，不适用于大型软件工程。</pre>"
+	element.val="<p>SWS语言由softwareshare组织创建于2017年</p>"
   }
 </script>
 </head>
