--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ function alert_what()
 </head>
 	<body>
 		<h1>学习SWS语言</h1>
-	 	<button onclick="w_alert()">SWS语言是什么？</button>
+	 	<button onclick="alert_what()">SWS语言是什么？</button>
 		<div id="div1"/>
 	</body>
 </html>
