--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html>
 	<head>
 <script type="text/javascript">
-function alert_what()
-  {
-	var element=document.getElementById("div1");
-	element.val="<p>SWS语言由softwareshare组织创建于2017年</p>"
-  }
 </script>
 </head>
 	<body>
 		<h1>学习SWS语言</h1>
-	 	<button onclick="alert_what()">SWS语言是什么？</button>
+	 	<a href="/what.txt"><button>SWS语言是什么？</button></a>
 		<div id="div1"/>
 	</body>
 </html>
