--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 	<body>
 		<h1>学习SWS语言</h1>
-	 	<a href="what.txt"><button>SWS语言是什么？</button></a>
+	 	<a href="/learn-sws-language/what.txt"><button>SWS语言是什么？</button></a>
 		<div id="div1"/>
 	</body>
 </html>
