--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 		<h1>学习SWS语言</h1>
 	 	<a href="/learn-sws-language/what.txt"><button>SWS语言是什么？</button></a>
 		<div id="div1"/>
+		<div>
+			<p>本文档会不断更新，目前暂未建设完毕，请谅解。</p>
+		</div>
 	</body>
 </html>
