Update and rename what.txt to what.html

--- a/what.html
+++ b/what.html
@@ -1,4 +1,7 @@
-                          SWS语言简介
+ <html>
+ <body>
+ <pre>
+                       <h1>第一章 SWS语言简介</h1>
 
 SWS语言由softwareshare组织创建于2017年，自第一个版本起就十分受欢迎。它是
 SWS语言有许多优点，以下是它的几大优点：
@@ -12,3 +15,15 @@ SWS语言有许多优点，以下是它的几大优点：
 1：对网络编程支持度不佳，它的snet库虽指令精简，速度快，但经常出现一些意外问题，有些问题就连它的开发者都无法解决。
 2：对数据库支持度不佳，只支持SWS官方数据库，导致不善于和其他语言混合编程。
 3：对底层编程支持度不佳，导致很难与硬件或底层系统交互，不适用于大型软件工程。
+了解了sws语言的优缺点，我们还给大家总结了一下适合使用sws语言的程序类型：
+1：需要大量使用图形界面的程序。
+2：算法程序。
+3：小型工程。
+4：可以下载的小程序。
+5：需要可移植性高的程序。
+6：需要图形界面的可移植程序。
+                      <h1>第2章 Hello,World!程序</h1>
+<p>下面内容待更新，请谅解。</p>
+</pre>
+</body>
+</html>
