--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 	<body>
 		<h1>学习SWS语言</h1>
-	 	<a href="/learn-sws-language/what.txt"><button>SWS语言是什么？</button></a>
+	 	<a href="/learn-sws-language/what.html"><button>开始学习！</button></a>
 		<div id="div1"/>
 		<div>
-			<p>本文档会不断更新，目前暂未建设完毕，请谅解。</p>
+			<p>本文档会不断更新，目前暂未建设完毕，请谅解。本网站资源全部免费。</p>
 		</div>
 	</body>
 </html>
