--- a/what.html
+++ b/what.html
@@ -25,11 +25,11 @@ SWS语言有许多优点，以下是它的几大优点：
                       <h1>第2章 Hello,World!程序</h1>
 在sws语言中，程序以模块的方式被编译器录取，每一个模块由名称以及内部内容被保存在内存中。你可以使用var声明模块，在{}中填写程序内容。比如var i{}。而编译器则会在程序运行时运行main这个模块。
 下面，了解了程序的基本的构成，我们可以看一看你的第一个sws语言程序了。
-<code>
+<strong>
 var main{
 out<<sws done
 }
-</code>
+</strong>
 </pre>
 <p>下面内容待更新，请谅解。</p>
 </body>
