--- a/what.html
+++ b/what.html
@@ -27,7 +27,7 @@ SWS语言有许多优点，以下是它的几大优点：
 下面，了解了程序的基本的构成，我们可以看一看你的第一个sws语言程序了。
 <strong>
 var main{
-out<<sws done
+out&lt&ltsws done
 }
 </strong>
 <button onclick="alert('sws')">try it</button>
