--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	 	<a href="/learn-sws-language/what.html"><button>开始学习！</button></a>
 		<div id="div1"/>
 		<div>
+<a href="http://www.xitongzhijia.net/" target="_blank">系统之家</a>
 			<p>本文档会不断更新，目前暂未建设完毕，请谅解。本网站资源全部免费。</p>
 		</div>
 	</body>
